trying to fix home section white space issue

--- a/css/main.css
+++ b/css/main.css
@@ -58,6 +58,7 @@ a {
 #home-section {
   position: relative;
   min-height: 100vh;
+  margin: 0 0;
   position: relative;
   background-image: url(../images/dark-desk.jpg);
   background-position: center;
