--- a/css/mobile.css
+++ b/css/mobile.css
@@ -60,6 +60,7 @@
   }
 
   #navigation > label {
+    max-width: 10ch;
     font-size: 1rem;
   }
 
